Fix line wrap in label tags

--- a/src/app/components/IssueCardComponent/IssueCardComponent.module.css
+++ b/src/app/components/IssueCardComponent/IssueCardComponent.module.css
@@ -39,6 +39,10 @@
     padding: 5px 10px;
     margin: 0 5px;
     border-radius: 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
 }
 
 .open {
